API bulk action: bulk create host_configs implementation
