# cmk/gui/plugins/openapi/endpoints/host_config.py
@@ -14,6 +14,7 @@ from connexion import problem  # type: ignore[import]
 
 from cmk.gui import watolib
 from cmk.gui.http import Response
+from cmk.gui.exceptions import MKUserError
 from cmk.gui.plugins.openapi.endpoints.folder_config import load_folder
 from cmk.gui.plugins.openapi.restful_objects import (
     constructors,
@@ -39,21 +40,103 @@ def create_host(params):
     attributes = body.get('attributes', {})
     cluster_nodes = body.get('nodes', [])
 
-    check_hostname(host_name, should_exist=False)
+    _verify_host_specs(attributes, host_name)
+
     for node in cluster_nodes:
         check_hostname(node, should_exist=True)
 
-    validate_host_attributes(attributes, new=True)
-
-    if folder_id == 'root':
-        folder = watolib.Folder.root_folder()
-    else:
-        folder = load_folder(folder_id, status=400)
+    folder = _host_folder(folder_id)
 
     folder.create_hosts([(host_name, attributes, cluster_nodes)])
 
     host = watolib.Host.host(host_name)
     return _serve_host(host)
+
+
+def _host_folder(folder_id):
+    if folder_id == 'root':
+        folder = watolib.Folder.root_folder()
+    else:
+        folder = load_folder(folder_id, status=400)
+    return folder
+
+
+def _verify_host_specs(attributes, host_name):
+    # TODO: move implementation to the host/folder schema so verification does not happen in endpoint
+    check_hostname(host_name, should_exist=False)
+    validate_host_attributes(attributes, new=True)
+
+
+@endpoint_schema(constructors.domain_type_action_href('host_config', 'bulk-create'),
+                 'cmk/bulk_create',
+                 method='post',
+                 request_schema=request_schemas.BulkCreateHost,
+                 response_schema=response_schemas.HostCollection)
+def bulk_create_hosts(params):
+    """Bulk create hosts"""
+    # TODO: addition of etag mechanism
+    body = params['body']
+    entries = body['entries']
+
+    host_details = {}
+    problematic_hosts = {}
+
+    for host_create_details in entries:
+        host_name = host_create_details['host_name']
+        attributes = host_create_details.get('attributes', {})
+        cluster_nodes = host_create_details.get('nodes', [])
+
+        try:
+            _verify_host_specs(attributes, host_name)
+        except MKUserError as exc:
+            problematic_hosts[host_name] = str(exc)
+            continue
+
+        faulty_nodes = _verify_cluster_nodes(cluster_nodes)
+
+        if faulty_nodes:
+            problematic_hosts[host_name] = f"Invalid cluster nodes: {' ,'.join(faulty_nodes)}"
+            continue
+
+        try:
+            folder = _host_folder(host_create_details['folder'])
+        except MKUserError as exc:
+            problematic_hosts[host_name] = str(exc)
+            continue
+
+        host_details[host_name] = {
+            'folder': folder,
+            'attributes': attributes,
+            'nodes': cluster_nodes,
+        }
+
+    if problematic_hosts:
+        return problem(
+            status=400,
+            title="Provided host details are faulty",
+            detail=
+            f"The configurations for following host groups are faulty: {' ,'.join(problematic_hosts)}",
+            ext=problematic_hosts,
+        )
+
+    hosts = []
+    for host_name, host_elements in host_details.items():
+        host_elements['folder'].create_hosts([(host_name, host_elements['attributes'],
+                                               host_elements['nodes'])])
+        host = watolib.Host.host(host_name)
+        hosts.append(host)
+
+    return _host_collection(hosts)
+
+
+def _verify_cluster_nodes(nodes):
+    faulty_nodes = []
+    for node in nodes:
+        try:
+            check_hostname(node, should_exist=True)
+        except MKUserError:
+            faulty_nodes.append(node)
+    return faulty_nodes
 
 
 @endpoint_schema(constructors.collection_href('host_config'),
@@ -62,6 +145,10 @@ def create_host(params):
                  response_schema=response_schemas.HostCollection)
 def list_hosts(param):
     """List all hosts"""
+    return _host_collection(watolib.Folder.root_folder().all_hosts_recursively().values())
+
+
+def _host_collection(hosts):
     return constructors.serve_json({
         'id': 'host',
         'value': [
@@ -71,7 +158,7 @@ def list_hosts(param):
                     'title': host.name(),
                     'id': host.id()
                 },
-            ) for host in watolib.Folder.root_folder().all_hosts_recursively().values()
+            ) for host in hosts
         ],
         'links': [constructors.link_rel('self', constructors.collection_href('host_config'))],
     })
